---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1060                                 -
---------------------------------------------
- 2020-12-29                                -
---------------------------------------------
.: WSM: Task: Disable button when start invoice module (WSM-256)

---------------------------------------------
- 2020-12-27                                -
---------------------------------------------
.: WSM: Task: Style the font weight and adjust invoice size (WSM-250)

---------------------------------------------
- 2020-12-27                                -
---------------------------------------------
.: WSM: Task: Create a status selection column (WSM-258)
.: WSM: Task: Mark order as self-pickup (WSM-257)
.: WSM: Task: Make SKU as optional field (WSM-255)
.: WSM: Task: Rename order to invoice (WSM-250)
.: WSM: Task: Startup page for Order Module (WSM-256)

---------------------------------------------
- 2020-12-26                                -
---------------------------------------------
.: WSM: Feature: Invoice Module (WSM-250)
.: WSM: Task: CLONE - Prevent receiptId got brute force and customer information being exposed (WSM-259)

---------------------------------------------
- 2020-12-17                                -
---------------------------------------------
.: WSM: Feature: Promotion Module (WSM-252)
.: WSM: Task: Add name of item type (WSM-254)

---------------------------------------------
- 2020-12-16                                -
---------------------------------------------
.: WSM: Feature: Customer Module (WSM-253)

- v1.0.1050                                 -
---------------------------------------------
- 2020-12-06                                -
---------------------------------------------
.: WSM: Task: Update autocomplete api (WSM-248)
.: WSM: Task: Update command (WSM-216)
