@@ -7,6 +7,7 @@
 - 2020-12-29                                -
 ---------------------------------------------
 .: WSM: Task: Disable button when start invoice module (WSM-256)
+.: WSM: Task: Fixed minor bugs in customer module (WSM-253)
 
 ---------------------------------------------
 - 2020-12-27                                -
